add aviaticket, business and church

--- a/S&Mitler/index.html
+++ b/S&Mitler/index.html
@@ -5,14 +5,13 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>S&amp;Mitler</title>
 	<link rel="shortcut icon" href="img/faviconka_ru_1980.gif" type="image/x-icon" />
-	<style>body{opacity: 0;overflow-x: hidden; }html{background: #1a1a1a}</style>
+	<style>body{opacity: 0;overflow-x: hidden; }html{background: #1a1a1a;overflow-x: hidden}</style>
 </head>
 
 <body id="ishome">
 
 <div class="preloader">
 	<div class="content-preloader">
-
 	</div>
 </div>
 
@@ -417,7 +416,6 @@
 </div>
 
 <div class="to-top" title="to top"><i class="fa fa-angle-double-up"></i></div>
-
 
 <!--style and scripts-->
 <link rel='stylesheet' href='libs/mmenu/mmenu.css' type='text/css' media='all' />
