--- a/index.html
+++ b/index.html
@@ -48,13 +48,6 @@
                     <span>Посмотреть</span>
                 </div>
             </a>
-            <a href="whyknotpillow" class="list__item">
-                <img src="image/whyknot.PNG" alt="">
-                <span class="name">WhyKnotPillow</span>
-                <div class="hovered-block-link">
-                    <span>Посмотреть</span>
-                </div>
-            </a>
             <a href="LUX" class="list__item">
                 <img src="image/lux.PNG" alt="">
                 <span class="name">Lux</span>
@@ -72,6 +65,34 @@
             <a href="Unikki" class="list__item">
                 <img src="image/unikki.PNG" alt="">
                 <span class="name">Unikki</span>
+                <div class="hovered-block-link">
+                    <span>Посмотреть</span>
+                </div>
+            </a>
+            <a href="whyknotpillow" class="list__item">
+                <img src="image/whyknot.PNG" alt="">
+                <span class="name">WhyKnotPillow</span>
+                <div class="hovered-block-link">
+                    <span>Посмотреть</span>
+                </div>
+            </a>
+            <a href="Aviaticket" class="list__item">
+                <img src="image/avia.PNG" alt="">
+                <span class="name">Aviaticket</span>
+                <div class="hovered-block-link">
+                    <span>Посмотреть</span>
+                </div>
+            </a>
+            <a href="Business" class="list__item">
+                <img src="image/business.PNG" alt="">
+                <span class="name">Business</span>
+                <div class="hovered-block-link">
+                    <span>Посмотреть</span>
+                </div>
+            </a>
+            <a href="Church" class="list__item">
+                <img src="image/Church.PNG" alt="">
+                <span class="name">Church</span>
                 <div class="hovered-block-link">
                     <span>Посмотреть</span>
                 </div>
