small fix in avia

--- a/Aviaticket/index.html
+++ b/Aviaticket/index.html
@@ -56,13 +56,19 @@
 <nav class="nav-drill">
   <ul class="nav-items nav-level-1">
     <li class="nav-item ">
-			<a class="nav-link " href="#">
+      <a class="nav-link " href="index.html">
+        Главная
+      </a>
+    </li>
+
+    <li class="nav-item ">
+			<a class="nav-link " href="help.html">
 				Авиабилеты
 			</a>
 		</li>
 
     <li class="nav-item">
-			<a class="nav-link" href="#">
+			<a class="nav-link" href="help.html">
 			ЖД билеты
 			</a>
 		</li>
@@ -72,12 +78,12 @@
 			</a>
 		</li>
     <li class="nav-item">
-			<a class="nav-link" href="#">
-				Трансферы
+			<a class="nav-link" href="countries.html">
+				Страны
 			</a>
 		</li>
     <li class="nav-item">
-			<a class="nav-link" href="#">
+			<a class="nav-link" href="contacts.html">
 				Контакты
 			</a>
 		</li>
