--- a/Aviaticket/countries.html
+++ b/Aviaticket/countries.html
@@ -56,38 +56,44 @@
 </div>
 </header>
 
-<nav class="nav-drill">
-  <ul class="nav-items nav-level-1">
-    <li class="nav-item ">
-			<a class="nav-link " href="#">
-				Авиабилеты
-			</a>
-		</li>
+    <nav class="nav-drill">
+      <ul class="nav-items nav-level-1">
+        <li class="nav-item ">
+          <a class="nav-link " href="index.html">
+            Главная
+          </a>
+        </li>
 
-    <li class="nav-item">
-			<a class="nav-link" href="#">
-			ЖД билеты
-			</a>
-		</li>
-    <li class="nav-item">
-			<a class="nav-link" href="#">
-				Автобусы
-			</a>
-		</li>
-    <li class="nav-item">
-			<a class="nav-link" href="#">
-				Трансферы
-			</a>
-		</li>
-    <li class="nav-item">
-			<a class="nav-link" href="#">
-				Контакты
-			</a>
-		</li>
+        <li class="nav-item ">
+          <a class="nav-link " href="help.html">
+            Авиабилеты
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="help.html">
+            ЖД билеты
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            Автобусы
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="countries.html">
+            Страны
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacts.html">
+            Контакты
+          </a>
+        </li>
 
 
-  </ul>
-</nav>
+      </ul>
+    </nav>
 
 
 <div class="wrap">
