add small features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="cloud">
+    <img src="image/cloud/cloud-01.png" alt="" class="cloud1">
+    <img src="image/cloud/cloud-02.png" alt="" class="cloud2">
+    <img src="image/cloud/cloud-03.png" alt="" class="cloud3">
+    <img src="image/cloud/cloud-04.png" alt="" class="cloud4">
+</div>
 
 <div class="container">
 
@@ -37,6 +43,13 @@
             <a href="S&Mitler" class="list__item">
                 <img src="image/smitler.PNG" alt="">
                 <span class="name">Smitler</span>
+                <div class="hovered-block-link">
+                    <span>Посмотреть</span>
+                </div>
+            </a>
+            <a href="GameDesign" class="list__item">
+                <img src="image/gamedesign.PNG" alt="">
+                <span class="name">Game Design</span>
                 <div class="hovered-block-link">
                     <span>Посмотреть</span>
                 </div>
