--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+<!--    <style>body{opacity: 0;overflow-x: hidden; }html{background: #1a1a1a;overflow-x: hidden}</style>-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="preloader">
+    <div class="content-preloader">
+        <div class="cssload-loader">
+            <div class="cssload-inner cssload-one"></div>
+            <div class="cssload-inner cssload-two"></div>
+            <div class="cssload-inner cssload-three"></div>
+        </div>
+    </div>
+</div>
+
+
 <div class="cloud">
     <img src="image/cloud/cloud-01.png" alt="" class="cloud1">
     <img src="image/cloud/cloud-02.png" alt="" class="cloud2">
@@ -116,7 +128,7 @@
 
 </div>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
